k8s/api/mainnet/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wenmerge-api
  namespace: wenmerge

spec:
  selector:
    matchLabels:
      app: wenmerge-api
  replicas: 1
  template:
    metadata:
      labels:
        app: wenmerge-api
    spec:
      containers:
      - name: backend
        image: rootwarp/wenmerge-api:v0.1.2
        ports:
        - containerPort: 9090
