k8s/api/mainnet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-wenmerge-api
  namespace: wenmerge

spec:
  type: ClusterIP
  selector:
    app: wenmerge-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9090
